--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.4:'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.0'
 
 	compileOnly 'org.projectlombok:lombok'
 	compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
