--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.6.4:'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2:'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.0'
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
 
