--- a/build.gradle
+++ b/build.gradle
@@ -24,14 +24,18 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2:'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.0'
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
+    testImplementation 'org.projectlombok:lombok:1.18.22'
 
-	compileOnly 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
 	compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
 
 	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mockito:mockito-core:4.8.0'
 	testImplementation 'junit:junit:4.13.2'
+	testImplementation 'org.hamcrest:hamcrest:2.2'
+	testImplementation 'io.rest-assured:rest-assured:5.2.1'
 }
 
 tasks.named('test') {
